--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,10 @@ body {
   list-style-type: none;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 50px;
+  text-align: left;
 }
 
-
-
+.common-list-item {
+  background-color: tan;
+  padding-left: 20px;
+}
